added timer and when button is clicked the timer begins from 60 seconds

--- a/starter/index.html
+++ b/starter/index.html
@@ -12,7 +12,8 @@
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <div class="timer">Time: <span id="time">0</span></div>
+    <p class="time" style="text-align:right;"></p>
+    <div id="main"></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
@@ -40,9 +41,8 @@
       </div>
 
       <div id="feedback" class="feedback hide"></div>
-    </div>
+    </div> 
 
-    <script src="./assets/js/questions.js"></script>
-    <script src="./assets/js/logic.js"></script>
+    <script src="./logic.js"></script>
   </body>
 </html>
