--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Try to answer the following code-related questions within the time
-          limit. Keep in mind that incorrect answers will penalize your
+          Do you have what it takes to answer all the questions within a minute, What are you waiting for? Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
         <button id="start">Start Quiz</button>
