moved html folder

--- a/starter/index.html
+++ b/starter/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Mu;tiple Choice Quiz</title>
+    <title>Coding Quiz</title>
 
     <link rel="stylesheet" href="./assets/css/styles.css" />
   </head>
@@ -12,14 +12,15 @@
   <body>
     <div class="scores"><a href="highscores.html">View Highscores</a></div>
 
-    <p class="time" style="text-align:right;"></p>
+    <p class="time" style="text-align:right;"></h4>
     <div id="main"></div>
 
     <div class="wrapper">
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Do you have what it takes to answer all the questions within a minute, What are you waiting for? Keep in mind that incorrect answers will penalize your
+          Try to answer the following code-related questions within the time
+          limit. Keep in mind that incorrect answers will penalize your
           score/time by ten seconds!
         </p>
         <button id="start">Start Quiz</button>
